# git-manage

./: Cargo.toml  README.md
.github/workflows/: lint.yml
src/: cli.rs  config.rs  git.rs  main.rs  ui.rs
src/commands/: add.rs  apply.rs  bind.rs  clear_log.rs  completions.rs  hook.rs  init.rs  list.rs  log.rs  mod.rs  prune.rs  remove.rs  status.rs  switch.rs  whoami.rs
