[package]
authors = ["AmitxD"]
description = "Switch between GitHub accounts without the pain"
edition = "2024"
name = "git-manage"
version = "0.0.1"

[[bin]]
name = "git-manage"
path = "src/main.rs"

[dependencies]
anyhow = "1.0.102"
chrono = { version = "0.4.44", features = ["serde"] }
clap = { version = "4.6.1", features = ["derive"] }
clap_complete = "4.6.3"
colored = "3.1.1"
dirs = "6.0.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
